force-app/main/default/objects/Inverters__x/Inverters__x.object-meta.xml
<CustomObject>
    <description>Inverters</description>
    <externalDataSource>AusNet_OData</externalDataSource>
    <externalName>Inverters</externalName>
    <label>Inverters</label>
    <pluralLabel>Inverters</pluralLabel>
</CustomObject>