force-app/main/default/objects/Inverters__x/fields/inverter_number__c.field-meta.xml
<CustomField>
    <fullName>inverter_number__c</fullName>
    <description>inverter_number</description>
    <externalDeveloperName>inverter_number</externalDeveloperName>
    <label>inverter_number</label>
    <length>128</length>
    <type>Text</type>
</CustomField>