force-app/main/default/objects/Inverters__x/fields/is_battery__c.field-meta.xml
<CustomField>
    <fullName>is_battery__c</fullName>
    <description>is_battery</description>
    <externalDeveloperName>is_battery</externalDeveloperName>
    <label>is_battery</label>
    <length>128</length>
    <type>Text</type>
</CustomField>