force-app/main/default/objects/Inverters__x/fields/is_solar__c.field-meta.xml
<CustomField>
    <fullName>is_solar__c</fullName>
    <description>is_solar</description>
    <externalDeveloperName>is_solar</externalDeveloperName>
    <label>is_solar</label>
    <length>128</length>
    <type>Text</type>
</CustomField>