force-app/main/default/objects/Inverters__x/fields/manufacturer__c.field-meta.xml
<CustomField>
    <fullName>manufacturer__c</fullName>
    <description>manufacturer</description>
    <externalDeveloperName>manufacturer</externalDeveloperName>
    <label>manufacturer</label>
    <length>128</length>
    <type>Text</type>
</CustomField>