force-app/main/default/objects/Inverters__x/fields/phases__c.field-meta.xml
<CustomField>
    <fullName>phases__c</fullName>
    <description>phases</description>
    <externalDeveloperName>phases</externalDeveloperName>
    <label>phases</label>
    <length>128</length>
    <type>Text</type>
</CustomField>