force-app/main/default/objects/Inverters__x/fields/rated_apparent_va__c.field-meta.xml
<CustomField>
    <fullName>rated_apparent_va__c</fullName>
    <description>rated_apparent_va</description>
    <externalDeveloperName>rated_apparent_va</externalDeveloperName>
    <label>rated_apparent_va</label>
    <length>128</length>
    <type>Text</type>
</CustomField>